ensure vertical spacing between paragraphs in articles (#397)

--- a/src/components/containers/articles/article.module.css
+++ b/src/components/containers/articles/article.module.css
@@ -25,3 +25,7 @@
   @apply mx-auto
   max-w-[43.125rem];
 }
+
+.paragraphBottomMargin {
+  @apply mb-[1.25rem];
+}
